--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "method-override": "^2.3.7",
     "mongoose": "^4.8.3",
     "morgan": "~1.7.0",
+    "multer": "^1.4.1",
     "node-restful": "^0.2.6",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "serve-favicon": "~2.3.2"
