--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "shelljs": "^0.8.3"
   }
 }
