--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "app-root-path": "^2.2.1",
     "bcrypt": "^3.0.5",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
