--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request-promise": "^4.2.4",
     "serve-favicon": "~2.3.2",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "xml2js": "^0.4.19"
   }
 }
