--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "app-root-path": "^2.2.1",
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.5",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
@@ -22,8 +23,10 @@
     "node-restful": "^0.2.6",
     "nodemailer": "^6.1.1",
     "nodemon": "^1.19.1",
+    "pagarme": "^4.4.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "serve-favicon": "~2.3.2",
     "shelljs": "^0.8.3",
